added api service for "importables" photo locations that can be used for album imports